--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </head>
 
   <body>
+  
+  <embed src="export/flash/bin/SSG.swf" width="640" height="480"/>
     <a id="forkme_banner" href="https://github.com/droidalex/SSG">View on GitHub</a>
     <div class="shell">
 
