--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@ $ git checkout gh-pages
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+</div>
  
- <embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/>
+ <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 
+<div class="shell">
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
