--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 
- 
+ </div>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 
 
