--- a/index.html
+++ b/index.html
@@ -10,34 +10,27 @@
   
  
     <a id="forkme_banner" href="https://github.com/droidalex/SSG">View on GitHub</a>
-    <div class="shell">
+  
 
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a><br><a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
 
      
  
- <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="320" height="240"/></div>
+ <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 
 
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
+ 
             <p>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-   
+  
       </footer>
 
-    </div>
-
-    
+ 
   </body>
 </html>
