--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
 
      
- 
+ <center>
+ <h3>Silly Space Game</h3>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
+</center>
 
-
-      <footer>
+      <footer style="position:absolute;bottom:5px;">
  
             <p>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></p>
   
