--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a><br><a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -28,7 +28,7 @@
 
       <footer style="position:absolute;bottom:5px;">
  
-            <p>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></p>
+            <p><small>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></small></p>
   
       </footer>
 
