--- a/index.html
+++ b/index.html
@@ -7,22 +7,14 @@
   </head>
 
   <body>
-  
- 
-    <a id="forkme_banner" href="https://github.com/droidalex/SSG">View on GitHub</a>
-  
-
-
-      <section id="downloads">
+        <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a id="forkme_banner" href="https://github.com/droidalex/SSG">View on GitHub</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
-
-
-     
  <center>
  <h3>Silly Space Game</h3>
+ <p>Click on Game to try it.</p>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 </center>
 
