--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </span>
       </section>
  <center>
- <h3>Silly Space Game</h3>
+ <h3 style="font-size:12px;font-family:arial;">Silly Space Game</h3>
  <p>Click on Game to try it.</p>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 </center>
