--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </span>
       </section>
  <center>
- <h3 style="font-size:12px;font-family:arial;">Silly Space Game</h3>
- <p>Click on Game to try it.</p>
+ <h3 style="font-size:14px;font-family:arial;">Silly Space Game</h3>
+ <p style="font-size:12px;font-family:arial;"><i>Click on Game to try it.(work in progress)</i></p>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 </center>
 
