--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ssg by droidalex</title>
   </head>
 
-  <body>
+  <body style="background:silver">
         <section id="downloads">
         <span class="inner">
           <a id="forkme_banner" href="https://github.com/droidalex/SSG">View on GitHub</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/zipball/master" class="zip"><em>download</em> .ZIP</a>&nbsp;&nbsp;<a href="https://github.com/droidalex/SSG/tarball/master" class="tgz"><em>download</em> .TGZ</a>
