--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <footer style="position:absolute;bottom:1px;">
  
-            <p><small>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></small></p>
+            <p style="font-size:10px;font-family:arial;"><i></i>this project by <a href="https://github.com/droidalex">droidalex</a> can be found on <a href="https://github.com/droidalex/SSG">GitHub</a></i></p>
   
       </footer>
 
