--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </section>
  <center>
  <h3 style="font-size:16px;font-family:arial;">Silly Space Game</h3>
- <p style="font-size:14px;font-family:arial;"><i>Mouse click on Game to play it.(work in progress)</i></p>
+ <p style="font-size:14px;font-family:arial;"><i>Mouse click on Game to play it.(It's not done. It's a work in progress)</i></p>
  <div><embed style="position:absolute;left:25%;" src="export/flash/bin/SSG.swf" width="640" height="480"/></div>
 </center>
 
